cmake_minimum_required(VERSION 3.19)
project(cpp_learning)

set(CMAKE_CXX_STANDARD 14)

#add_executable(cpp_learning cpp_primer_5/ch01/ex1_1.cpp)
#add_executable(cpp_learning cpp_primer_5/ch01/ex1_2.cpp)
#add_executable(cpp_learning cpp_primer_5/ch01/ex1_4.cpp)
#add_executable(cpp_learning cpp_primer_5/ch01/ex1_5.cpp)

#add_executable(cpp_learning cpp_primer_5/ch02/ex2_4.cpp)
#add_executable(cpp_learning cpp_primer_5/ch02/ex2_8.cpp)
#add_executable(cpp_learning cpp_primer_5/ch02/ex2_42.cpp cpp_primer_5/ch02/Sales_data.h)

#add_executable(cpp_learning cpp_primer_5/ch03/ex3_6.cpp)
#add_executable(cpp_learning cpp_primer_5/ch03/ex3_17.cpp)
#add_executable(cpp_learning cpp_primer_5/ch03/ex3_23.cpp)
#add_executable(cpp_learning cpp_primer_5/ch03/ex3_31.cpp)
#add_executable(cpp_learning cpp_primer_5/ch03/ex3_41.cpp)

#add_executable(cpp_learning cpp_primer_5/ch04/ex4_21.cpp)
#add_executable(cpp_learning cpp_primer_5/ch04/ex4_28.cpp)

#add_executable(cpp_learning cpp_primer_5/ch05/ex5_9.cpp)
#add_executable(cpp_learning cpp_primer_5/ch05/ex5_14.cpp)
add_executable(cpp_learning cpp_primer_5/ch05/ex5_17.cpp)
