cmake_minimum_required(VERSION 3.19)
project(cpp_learning)

set(CMAKE_CXX_STANDARD 14)

#add_executable(cpp_learning cpp_primer_5/ch01/ex1_1.cpp)
#add_executable(cpp_learning cpp_primer_5/ch01/ex1_2.cpp)
#add_executable(cpp_learning cpp_primer_5/ch01/ex1_4.cpp)
#add_executable(cpp_learning cpp_primer_5/ch01/ex1_5.cpp)

#add_executable(cpp_learning cpp_primer_5/ch02/ex2_4.cpp)
#add_executable(cpp_learning cpp_primer_5/ch02/ex2_8.cpp)
#add_executable(cpp_learning cpp_primer_5/ch02/ex2_42.cpp cpp_primer_5/ch02/Sales_data.h)

#add_executable(cpp_learning cpp_primer_5/ch03/ex3_6.cpp)
#add_executable(cpp_learning cpp_primer_5/ch03/ex3_17.cpp)
#add_executable(cpp_learning cpp_primer_5/ch03/ex3_23.cpp)
#add_executable(cpp_learning cpp_primer_5/ch03/ex3_31.cpp)
#add_executable(cpp_learning cpp_primer_5/ch03/ex3_41.cpp)

#add_executable(cpp_learning cpp_primer_5/ch04/ex4_21.cpp)
#add_executable(cpp_learning cpp_primer_5/ch04/ex4_28.cpp)

#add_executable(cpp_learning cpp_primer_5/ch05/ex5_9.cpp)
#add_executable(cpp_learning cpp_primer_5/ch05/ex5_14.cpp)
#add_executable(cpp_learning cpp_primer_5/ch05/ex5_17.cpp)

#add_executable(cpp_learning cpp_primer_5/ch06/ex6_7.cpp)
#add_executable(cpp_learning cpp_primer_5/ch06/ex6_27.cpp)
#add_executable(cpp_learning cpp_primer_5/ch06/ex6_33.cpp)
#add_executable(cpp_learning cpp_primer_5/ch06/ex6_47.cpp)
#add_executable(cpp_learning cpp_primer_5/ch06/ex6_54.cpp)

#add_executable(cpp_learning
#        cpp_primer_5/ch07/ex7_3.cpp
#        cpp_primer_5/ch07/Sales_data.h
#        cpp_primer_5/ch07/Person.h
#        cpp_primer_5/ch07/Screen.h
#        cpp_primer_5/ch07/Debug.h)
#add_executable(cpp_learning
#        cpp_primer_5/ch07/ex7_27.cpp
#        cpp_primer_5/ch07/Screen.h)
#add_executable(cpp_learning cpp_primer_5/ch07/ex7_31.h)

#add_executable(cpp_learning cpp_primer_5/ch08/ex8_1.cpp)
#add_executable(cpp_learning cpp_primer_5/ch08/ex8_4.cpp)
#add_executable(cpp_learning cpp_primer_5/ch08/ex8_10.cpp)

#add_executable(cpp_learning cpp_primer_5/ch09/ex9_41.cpp)
#add_executable(cpp_learning cpp_primer_5/ch09/ex9_43.cpp)
add_executable(cpp_learning cpp_primer_5/ch09/ex9_47.cpp)