cmake_minimum_required(VERSION 3.19)
project(cpp_learning)

set(CMAKE_CXX_STANDARD 14)

#add_executable(cpp_learning cpp_primer_5/ch01/ex1_1.cpp)
#add_executable(cpp_learning cpp_primer_5/ch01/ex1_2.cpp)
#add_executable(cpp_learning cpp_primer_5/ch01/ex1_4.cpp)
#add_executable(cpp_learning cpp_primer_5/ch01/ex1_5.cpp)

#add_executable(cpp_learning cpp_primer_5/ch02/ex2_4.cpp)
#add_executable(cpp_learning cpp_primer_5/ch02/ex2_8.cpp)
#add_executable(cpp_learning cpp_primer_5/ch02/ex2_42.cpp cpp_primer_5/ch02/Sales_data.h)

#add_executable(cpp_learning cpp_primer_5/ch03/ex3_6.cpp)
#add_executable(cpp_learning cpp_primer_5/ch03/ex3_17.cpp)
#add_executable(cpp_learning cpp_primer_5/ch03/ex3_23.cpp)
#add_executable(cpp_learning cpp_primer_5/ch03/ex3_31.cpp)
#add_executable(cpp_learning cpp_primer_5/ch03/ex3_41.cpp)

#add_executable(cpp_learning cpp_primer_5/ch04/ex4_21.cpp)
#add_executable(cpp_learning cpp_primer_5/ch04/ex4_28.cpp)

#add_executable(cpp_learning cpp_primer_5/ch05/ex5_9.cpp)
#add_executable(cpp_learning cpp_primer_5/ch05/ex5_14.cpp)
#add_executable(cpp_learning cpp_primer_5/ch05/ex5_17.cpp)

#add_executable(cpp_learning cpp_primer_5/ch06/ex6_7.cpp)
#add_executable(cpp_learning cpp_primer_5/ch06/ex6_27.cpp)
#add_executable(cpp_learning cpp_primer_5/ch06/ex6_33.cpp)
#add_executable(cpp_learning cpp_primer_5/ch06/ex6_47.cpp)
#add_executable(cpp_learning cpp_primer_5/ch06/ex6_54.cpp)

#add_executable(cpp_learning
#        cpp_primer_5/ch07/ex7_3.cpp
#        cpp_primer_5/ch07/Sales_data.h
#        cpp_primer_5/ch07/Person.h
#        cpp_primer_5/ch07/Screen.h
#        cpp_primer_5/ch07/Debug.h)
#add_executable(cpp_learning
#        cpp_primer_5/ch07/ex7_27.cpp
#        cpp_primer_5/ch07/Screen.h)
#add_executable(cpp_learning cpp_primer_5/ch07/ex7_31.h)

#add_executable(cpp_learning cpp_primer_5/ch08/ex8_1.cpp)
#add_executable(cpp_learning cpp_primer_5/ch08/ex8_4.cpp)
#add_executable(cpp_learning cpp_primer_5/ch08/ex8_10.cpp)

#add_executable(cpp_learning cpp_primer_5/ch09/ex9_41.cpp)
#add_executable(cpp_learning cpp_primer_5/ch09/ex9_43.cpp)
#add_executable(cpp_learning cpp_primer_5/ch09/ex9_47.cpp)

#add_executable(cpp_learning cpp_primer_5/ch10/ex10_1.cpp)
#add_executable(cpp_learning cpp_primer_5/ch10/ex10_3.cpp)
#add_executable(cpp_learning cpp_primer_5/ch10/ex10_34.cpp)

#add_executable(cpp_learning cpp_primer_5/ch11/ex11_3.cpp)
#add_executable(cpp_learning cpp_primer_5/ch11/ex11_12.cpp)

#add_executable(cpp_learning cpp_primer_5/ch12/ex12_2.cpp cpp_primer_5/ch12/StrBlob.cpp cpp_primer_5/ch12/StrBlob.h)
#add_executable(cpp_learning cpp_primer_5/ch12/ex12_6.cpp)
#add_executable(cpp_learning cpp_primer_5/ch12/ex12_20.cpp cpp_primer_5/ch12/StrBlob.cpp cpp_primer_5/ch12/StrBlob.h)
#add_executable(cpp_learning cpp_primer_5/ch12/ex12_26.cpp)

#add_executable(cpp_learning cpp_primer_5/ch14/ex14_44.cpp)

#add_executable(cpp_learning
#        cpp_primer_5/ch15/ex15_2.cpp
#        cpp_primer_5/ch15/Quote.h
#        cpp_primer_5/ch15/Bulk_quote.h
#        cpp_primer_5/ch15/Limit_quote.h)
#add_executable(cpp_learning
#        cpp_primer_5/ch15/ex15_29.cpp
#        cpp_primer_5/ch15/Quote.h
#        cpp_primer_5/ch15/Bulk_quote.h
#        cpp_primer_5/ch15/Limit_quote.h cpp_primer_5/ch15/Basket.h)

#add_executable(cpp_learning cpp_primer_5/ch16/ex16_2.cpp)
#add_executable(cpp_learning cpp_primer_5/ch16/ex16_12.cpp cpp_primer_5/ch16/Blob.h)
add_executable(cpp_learning
        cpp_primer_5/ch16/ex16_16.cpp
        cpp_primer_5/ch16/Vec.h)